--- a/shabnam-backend/package.json
+++ b/shabnam-backend/package.json
@@ -20,7 +20,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
-    "express-rate-limit": "^8.0.1",
+    "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
@@ -28,12 +28,14 @@
     "multer": "^2.0.2",
     "next": "^15.5.0",
     "nodemailer": "^7.0.5",
+    "rate-limit-mongo": "^2.3.2",
     "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
